# tessellate

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
ZMQ_test/: CMakeLists.txt  client.out  hwserver.cpp  server.out
ZMQ_test/tmp/: CMakeCache.txt
graphic_design/: tessellate_style_guide.txt
graphic_design/AI/: tessellate_logo_main.ai  tessellate_logo_stacked.ai  tessellate_logo_text.ai  tessellate_logo_triangle.ai
motion_control/: manualcontrol.py  move.py
motion_control/scannerMotion/: scannerMotion.ino
pc_to_mesh/: CMakeLists.txt  README.md  greedy_projection.cpp
server/: .gitignore  README.md  begin.sh  compile.sh  move.py  send_to_pcl.py  server.py
server/static/stylesheets/: style.css
server/templates/: index.html
server/zeromq-4.2.2/: Makefile  config.status  libtool
server/zeromq-4.2.2/builds/: Makefile
server/zeromq-4.2.2/builds/msvc/: Makefile
server/zeromq-4.2.2/doc/: Makefile
server/zeromq-4.2.2/perf/: inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
server/zeromq-4.2.2/perf/.deps/: inproc_lat.Po  inproc_thr.Po  local_lat.Po  local_thr.Po  remote_lat.Po  remote_thr.Po
server/zeromq-4.2.2/perf/.libs/: inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
server/zeromq-4.2.2/src/: libzmq.la  libzmq.pc  platform.hpp
server/zeromq-4.2.2/src/.deps/: src_libzmq_la-address.Plo  src_libzmq_la-client.Plo  src_libzmq_la-clock.Plo  src_libzmq_la-ctx.Plo  src_libzmq_la-curve_client.Plo  src_libzmq_la-curve_server.Plo  src_libzmq_la-dealer.Plo  src_libzmq_la-decoder_allocators.Plo  src_libzmq_la-devpoll.Plo  src_libzmq_la-dgram.Plo  src_libzmq_la-dish.Plo  src_libzmq_la-dist.Plo  src_libzmq_la-epoll.Plo  src_libzmq_la-err.Plo  src_libzmq_la-fq.Plo  src_libzmq_la-gather.Plo  src_libzmq_la-gssapi_client.Plo  src_libzmq_la-gssapi_mechanism_base.Plo  src_libzmq_la-gssapi_server.Plo  src_libzmq_la-io_object.Plo  src_libzmq_la-io_thread.Plo  src_libzmq_la-ip.Plo  src_libzmq_la-ipc_address.Plo  src_libzmq_la-ipc_connecter.Plo  src_libzmq_la-ipc_listener.Plo  src_libzmq_la-kqueue.Plo  src_libzmq_la-lb.Plo  src_libzmq_la-mailbox.Plo  src_libzmq_la-mailbox_safe.Plo  (+69 more)
server/zeromq-4.2.2/tools/: curve_keygen
src/: pointclouds.cpp  test_realsense.cpp
(+3 files in other folders)
